2002-04-12  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/AfterCmd.java (processTimerEvent,
	processIdleEvent):
	* src/jacl/tcl/lang/Interp.java (eval):
	* src/jacl/tcl/lang/PackageCmd.java (pkgRequire):
	* src/jacl/tcl/lang/Shell.java (run):
	* src/jacl/tcl/lang/SocketConnectionEvent.java (processEvent):
	* src/tclblend/tcl/lang/Interp.java (eval, recordAndEval):
	Pass TCL.EVAL_GLOBAL instead of TCL.GLOBAL_ONLY to
	eval() functions. Fixup docs that suggest using the
	wrong form.

2002-04-12  Shawn Boyce  <shawn@qcominc.com>

	* src/jacl/tcl/lang/FileCmd.java (copyRenameOneFile):
	Treat data copied via 'file copy' as binary. Fix
	array bound bug that was causing the copy command
	to fail. Fixup error message when too few arguments
	are passed to the 'file join' command.

2002-04-12  Shawn Boyce  <shawn@qcominc.com>

	* src/jacl/tcl/lang/FileCmd.java (cmdProc):
	Implement 'file volumes' command using the JDK 1.2
	method File.listRoots(). Reflection is used to preserve
	backward compatibility with JDK 1.1 systems. Fixed
	number of args check so that 'file volumes' can be run.

2002-04-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/EncodingCmd.java: Map the
	Tcl "identity" encoding to "UTF8" in Java. While
	this does not pass all the Tcl identity
	encoding tests, it does pass quite a few.
	* tests/tcl/utf.test: Add encoding command
	tests from Tcl 8.3.

2002-04-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Build demo binaries in a directory
	named bdemo. Build test binaries in a directory
	named btest. This will keep the make clean rule
	from removing the source files when configure
	is run in the src directory. Don't set auto_path
	when running Jacl since it is not required.

2002-01-22  Bruce Johnson  <bruce_johnson@merck.com>,
            Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (getChanType, getRefCount,
	getBufferedInput, getBufferedOutput, isBlocked,